Revert "  Fix title spacing"
This reverts commit 01f54052e4286c00d0464df78ae5dcb573363786.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -174,7 +174,7 @@ ul li {
 .section-title{
   color: #22b573;
   letter-spacing: 1px;
-  margin: 0 0 90px;
+  margin: 0 0 20px;
   text-transform: uppercase;
   text-align: center; }
 
